--- a/work.html
+++ b/work.html
@@ -28,10 +28,12 @@
           <a href="work.html">WORK</a>
         </div>
         <div id="nav-social-section" class="nav-section">
-          <a href="#">
+          <a
+            href="https://www.linkedin.com/in/mehmet-asil-k%C4%B1l%C4%B1%C3%A7-b80b75146/"
+          >
             <i class="fa-brands fa-linkedin"></i>
           </a>
-          <a href="#" target="_blank">
+          <a href="https://github.com/mehmetasilkilic" target="_blank">
             <i class="fa-brands fa-github"></i>
           </a>
         </div>
