--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <nav data-toggled="false" data-transitionable="false">
       <div id="nav-logo-section" class="nav-section">
         <a href="index.html">
-          <i class="fa-solid fa-dumpster-fire"></i>
+          <h2>MAK</h2>
         </a>
       </div>
       <div id="nav-mobile-section">
@@ -30,6 +30,7 @@
         <div id="nav-social-section" class="nav-section">
           <a
             href="https://www.linkedin.com/in/mehmet-asil-k%C4%B1l%C4%B1%C3%A7-b80b75146/"
+            target="_blank"
           >
             <i class="fa-brands fa-linkedin"></i>
           </a>
