--- a/about.html
+++ b/about.html
@@ -49,86 +49,134 @@
     </nav>
 
     <main>
-      <article data-index="1" data-status="inactive">
-        <div class="article-image-section article-section"></div>
-        <div class="article-description-section article-section">
-          <div>
-            <i class="fa-brands fa-apple"></i>
-            <a class="source-link" href="#" target="_blank"> App Store </a>
+      <div class="about-container">
+        <div class="about-section">
+          <div class="about-description">
+            <p class="first-par">
+              I’m a Digital Designer & Visual Developer based in Enschede,
+              Netherlands. Creating digital experiences with an eye for design
+              and motion.
+            </p>
+            <p class="second-par">
+              Being creative with digital and motion design for websites is what
+              I’ve been doing for the past 5+ years. With just UI / UX design I
+              was not satisfied. Creating websites that are visually attractive
+              through design and motion is what I love to do. By embracing
+              no-code tools like Webflow I'm not just the designer anymore. Now
+              I can develop my own digital creations into an online experience,
+              while having full control of design, motion and build.
+            </p>
           </div>
-          <div>
-            <i class="fa-brands fa-google-play"></i>
-            <a class="source-link" href="#" target="_blank"> Play Store </a>
-          </div>
-          <div>
-            <i class="fa-regular fa-globe"></i>
-            <a class="source-link" href="#" target="_blank"> Landing Page </a>
-          </div>
-          <div>
-            <i class="fa-brands fa-github"></i>
-            <a class="source-link" href="#" target="_blank"> Git Hub </a>
-          </div>
-        </div>
-        <div class="article-title-section article-section">
-          <h2>Reedu</h2>
-        </div>
-        <div class="article-nav-section article-section">
-          <button
-            class="article-nav-button"
-            type="button"
-            onclick="handleLeftClick()"
-          >
-            <i class="fa-light fa-arrow-left-long"></i>
-          </button>
-          <button
-            class="article-nav-button"
-            type="button"
-            onclick="handleRightClick()"
-          >
-            <i class="fa-light fa-arrow-right-long"></i>
-          </button>
-        </div>
-      </article>
-      <article data-index="0" data-status="active">
-        <div class="article-image-section article-section"></div>
-        <div class="article-description-section article-section">
-          <div>
-            <i class="fa-brands fa-apple"></i>
-            <a class="source-link" href="#" target="_blank"> App Store </a>
-          </div>
-          <div>
-            <i class="fa-brands fa-google-play"></i>
-            <a class="source-link" href="#" target="_blank"> Play Store </a>
-          </div>
-          <div>
-            <i class="fa-regular fa-globe"></i>
-            <a class="source-link" href="#" target="_blank"> Landing Page </a>
-          </div>
-          <div>
-            <i class="fa-brands fa-github"></i>
-            <a class="source-link" href="#" target="_blank"> Git Hub </a>
+          <div class="about-experience">
+            <p class="second-par">
+              Being creative with digital and motion design for websites is what
+              I’ve been doing for the past 5+ years. With just UI / UX design I
+              was not satisfied. Creating websites that are visually attractive
+              through design and motion is what I love to do. By embracing
+              no-code tools like Webflow I'm not just the designer anymore. Now
+              I can develop my own digital creations into an online experience,
+              while having full control of design, motion and build.
+            </p>
           </div>
         </div>
-        <div class="article-title-section article-section">
-          <h2>Fobbo</h2>
+        <div class="about-skills">
+          <div class="skills-title">
+            <h3>Skills</h3>
+          </div>
+          <div class="skill-list">
+            <div class="skill-container">
+              <img
+                src="https://cdn.worldvectorlogo.com/logos/html-1.svg"
+                alt="HTML"
+                width="60"
+                height="60"
+              />
+              <p>HTML</p>
+            </div>
+            <div class="skill-container">
+              <img
+                src="https://cdn.worldvectorlogo.com/logos/css-3.svg"
+                alt="CSS"
+                width="60"
+                height="60"
+              />
+              <p>CSS</p>
+            </div>
+            <div class="skill-container">
+              <img
+                src="https://cdn.worldvectorlogo.com/logos/javascript-1.svg"
+                alt="JavaScript"
+                width="60"
+                height="60"
+              />
+              <p>JavaScript</p>
+            </div>
+            <div class="skill-container">
+              <img
+                src="https://cdn.worldvectorlogo.com/logos/typescript.svg"
+                alt="TypeScript"
+                width="60"
+                height="60"
+              />
+              <p>TypeScript</p>
+            </div>
+            <div class="skill-container">
+              <img
+                src="https://cdn.worldvectorlogo.com/logos/react-2.svg"
+                alt="React"
+                width="60"
+                height="60"
+              />
+              <p>React / React Native</p>
+            </div>
+            <div class="skill-container">
+              <img
+                src="https://cdn.worldvectorlogo.com/logos/redux.svg"
+                alt="Redux"
+                width="60"
+                height="60"
+              />
+              <p>Redux</p>
+            </div>
+            <div class="skill-container">
+              <img
+                src="https://cdn.worldvectorlogo.com/logos/styled-components-1.svg"
+                alt="Styled Components"
+                width="60"
+                height="60"
+              />
+              <p>Styled Components</p>
+            </div>
+            <div class="skill-container">
+              <img
+                src="https://cdn.worldvectorlogo.com/logos/sass-1.svg"
+                alt="SASS"
+                width="60"
+                height="60"
+              />
+              <p>SASS</p>
+            </div>
+            <div class="skill-container">
+              <img
+                src="https://cdn.worldvectorlogo.com/logos/adobe-photoshop-2.svg"
+                alt="AdobePhotoshop"
+                width="60"
+                height="60"
+              />
+              <p>Adobe Photoshop</p>
+            </div>
+            <div class="skill-container">
+              <img
+                src="https://cdn.worldvectorlogo.com/logos/figma-1.svg"
+                alt="Figma"
+                width="60"
+                height="60"
+              />
+              <p>Figma</p>
+            </div>
+          </div>
         </div>
-        <div class="article-nav-section article-section">
-          <button
-            class="article-nav-button"
-            type="button"
-            onclick="handleLeftClick()"
-          >
-            <i class="fa-light fa-arrow-left-long"></i>
-          </button>
-          <button
-            class="article-nav-button"
-            type="button"
-            onclick="handleRightClick()"
-          >
-            <i class="fa-light fa-arrow-right-long"></i>
-          </button>
-        </div>
-      </article>
+      </div>
     </main>
     <script src="https://kit.fontawesome.com/944eb371a4.js"></script>
     <script src="script.js"></script>
