--- a/work.html
+++ b/work.html
@@ -52,25 +52,34 @@
       <article data-index="1" data-status="inactive">
         <div class="article-image-section article-section"></div>
         <div class="article-description-section article-section">
-          <div>
-            <i class="fa-brands fa-apple"></i>
-            <a class="source-link" href="#" target="_blank"> App Store </a>
+          <div class="desc">
+            <p>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A new generation mobile application
+              that displays the occupancy rates of businesses according to their
+              capacities.
+            </p>
           </div>
-          <div>
-            <i class="fa-brands fa-google-play"></i>
-            <a class="source-link" href="#" target="_blank"> Play Store </a>
-          </div>
-          <div>
-            <i class="fa-regular fa-globe"></i>
-            <a class="source-link" href="#" target="_blank"> Landing Page </a>
-          </div>
-          <div>
-            <i class="fa-brands fa-github"></i>
-            <a class="source-link" href="#" target="_blank"> Git Hub </a>
+          <div class="links">
+            <div>
+              <i class="fa-brands fa-apple"></i>
+              <a class="source-link" href="#" target="_blank"> App Store </a>
+            </div>
+            <div>
+              <i class="fa-brands fa-google-play"></i>
+              <a class="source-link" href="#" target="_blank"> Play Store </a>
+            </div>
+            <div>
+              <i class="fa-regular fa-globe"></i>
+              <a class="source-link" href="#" target="_blank"> Landing Page </a>
+            </div>
+            <div>
+              <i class="fa-brands fa-github"></i>
+              <a class="source-link" href="#" target="_blank"> Git Hub </a>
+            </div>
           </div>
         </div>
         <div class="article-title-section article-section">
-          <h2>Reedu</h2>
+          <h2>Fobbo</h2>
         </div>
         <div class="article-nav-section article-section">
           <button
@@ -92,25 +101,34 @@
       <article data-index="0" data-status="active">
         <div class="article-image-section article-section"></div>
         <div class="article-description-section article-section">
-          <div>
-            <i class="fa-brands fa-apple"></i>
-            <a class="source-link" href="#" target="_blank"> App Store </a>
+          <div class="desc">
+            <p>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;An application that offers access to
+              many news from a single source according to different news sources
+              or news categories.
+            </p>
           </div>
-          <div>
-            <i class="fa-brands fa-google-play"></i>
-            <a class="source-link" href="#" target="_blank"> Play Store </a>
-          </div>
-          <div>
-            <i class="fa-regular fa-globe"></i>
-            <a class="source-link" href="#" target="_blank"> Landing Page </a>
-          </div>
-          <div>
-            <i class="fa-brands fa-github"></i>
-            <a class="source-link" href="#" target="_blank"> Git Hub </a>
+          <div class="links">
+            <div>
+              <i class="fa-brands fa-apple"></i>
+              <a class="source-link" href="#" target="_blank"> App Store </a>
+            </div>
+            <div>
+              <i class="fa-brands fa-google-play"></i>
+              <a class="source-link" href="#" target="_blank"> Play Store </a>
+            </div>
+            <div>
+              <i class="fa-regular fa-globe"></i>
+              <a class="source-link" href="#" target="_blank"> Landing Page </a>
+            </div>
+            <div>
+              <i class="fa-brands fa-github"></i>
+              <a class="source-link" href="#" target="_blank"> Git Hub </a>
+            </div>
           </div>
         </div>
         <div class="article-title-section article-section">
-          <h2>Fobbo</h2>
+          <h2>Reedu</h2>
         </div>
         <div class="article-nav-section article-section">
           <button
