--- a/work.html
+++ b/work.html
@@ -60,7 +60,7 @@
             </p>
           </div>
           <div class="links">
-            <div>
+            <!--             <div>
               <i class="fa-brands fa-apple"></i>
               <a class="source-link" href="#" target="_blank"> App Store </a>
             </div>
@@ -71,10 +71,9 @@
             <div>
               <i class="fa-regular fa-globe"></i>
               <a class="source-link" href="#" target="_blank"> Landing Page </a>
-            </div>
+            </div> -->
             <div>
-              <i class="fa-brands fa-github"></i>
-              <a class="source-link" href="#" target="_blank"> Git Hub </a>
+              <a class="source-link" href="#" target="_blank"> Expo </a>
             </div>
           </div>
         </div>
@@ -103,27 +102,31 @@
         <div class="article-description-section article-section">
           <div class="desc">
             <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;An application that offers access to
-              many news from a single source according to different news sources
-              or news categories.
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Reedu offers access to many news in
+              a single application according to different news sources or news
+              categories.
             </p>
           </div>
           <div class="links">
             <div>
               <i class="fa-brands fa-apple"></i>
-              <a class="source-link" href="#" target="_blank"> App Store </a>
+              <a
+                class="source-link"
+                href="https://apps.apple.com/us/app/reedu/id1541536566"
+                target="_blank"
+              >
+                App Store
+              </a>
             </div>
-            <div>
+            <!--             <div>
               <i class="fa-brands fa-google-play"></i>
               <a class="source-link" href="#" target="_blank"> Play Store </a>
-            </div>
+            </div> -->
             <div>
               <i class="fa-regular fa-globe"></i>
-              <a class="source-link" href="#" target="_blank"> Landing Page </a>
-            </div>
-            <div>
-              <i class="fa-brands fa-github"></i>
-              <a class="source-link" href="#" target="_blank"> Git Hub </a>
+              <a class="source-link" href="https://reedu.app/" target="_blank">
+                Landing Page
+              </a>
             </div>
           </div>
         </div>
