--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </a>
         </div>
         <div id="nav-contact-section" class="nav-section">
-          <a href="#">GET IN TOUCH</a>
+          <a href="#">mehmetasil96@gmail.com</a>
         </div>
       </div>
       <button id="nav-toggle-button" type="button" onclick="handleNavToggle()">
