--- a/work.html
+++ b/work.html
@@ -39,7 +39,7 @@
           </a>
         </div>
         <div id="nav-contact-section" class="nav-section">
-          <a href="#">GET IN TOUCH</a>
+          <a href="#">mehmetasil96@gmail.com</a>
         </div>
       </div>
       <button id="nav-toggle-button" type="button" onclick="handleNavToggle()">
@@ -54,9 +54,8 @@
         <div class="article-description-section article-section">
           <div class="desc">
             <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A new generation mobile application
-              that displays the occupancy rates of businesses according to their
-              capacities.
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A mobile application that displays
+              the occupancy rates of businesses according to their capacities.
             </p>
           </div>
           <div class="links">
@@ -102,9 +101,9 @@
         <div class="article-description-section article-section">
           <div class="desc">
             <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Reedu offers access to many news in
-              a single application according to different news sources or news
-              categories.
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A news application that brings
+              together many news sources from different categories and presents
+              their content to users.
             </p>
           </div>
           <div class="links">
