--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
           </a>
         </div>
         <div id="nav-contact-section" class="nav-section">
-          <a href="#">GET IN TOUCH</a>
+          <a href="#">mehmetasil96@gmail.com</a>
         </div>
       </div>
       <button id="nav-toggle-button" type="button" onclick="handleNavToggle()">
@@ -53,30 +53,44 @@
         <div class="about-section">
           <div class="about-description">
             <p class="first-par">
-              I’m a Digital Designer & Visual Developer based in Enschede,
-              Netherlands. Creating digital experiences with an eye for design
-              and motion.
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I’m a React Native Developer based
+              in Istanbul, Turkey. Creating mobile applications with an eye for
+              design.
             </p>
             <p class="second-par">
-              Being creative with digital and motion design for websites is what
-              I’ve been doing for the past 5+ years. With just UI / UX design I
-              was not satisfied. Creating websites that are visually attractive
-              through design and motion is what I love to do. By embracing
-              no-code tools like Webflow I'm not just the designer anymore. Now
-              I can develop my own digital creations into an online experience,
-              while having full control of design, motion and build.
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;After graduating from the faculty of
+              architecture, I worked for a year in my first job as an architect,
+              but then I decided to change career and become a software
+              developer because I did not see a future for myself in this field.
+              After 6 months of self study I got my first job as a frontend
+              developer at Brighsun Group and worked there for 7 months. In this
+              job, I have worked on excahnge app, crypto wallet app, e-commerce
+              app and admin panels. Right now I am working on my own projects
             </p>
           </div>
           <div class="about-experience">
-            <p class="second-par">
-              Being creative with digital and motion design for websites is what
-              I’ve been doing for the past 5+ years. With just UI / UX design I
-              was not satisfied. Creating websites that are visually attractive
-              through design and motion is what I love to do. By embracing
-              no-code tools like Webflow I'm not just the designer anymore. Now
-              I can develop my own digital creations into an online experience,
-              while having full control of design, motion and build.
-            </p>
+            <h2>Experience</h2>
+            <div class="experience-list">
+              <div class="experience-container">
+                <p class="date">Feb 2022 - Sep 2022</p>
+                <h2>Brighsun Group</h2>
+                <p class="job">Frontend Developer</p>
+                <p class="desc">
+                  Development of exchange apps, crypto wallet and their admin
+                  panels.
+                </p>
+              </div>
+              <div class="experience-container">
+                <p class="date">Jun 2020 - Jul 2021</p>
+                <h2>Esentepe Architecture</h2>
+                <p class="job2">Architect</p>
+                <p class="desc">
+                  Architectural design, technical drawings, 3D modeling,
+                  construction site management and handling the application
+                  process of architectural projects.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="about-skills">
