--- a/about.html
+++ b/about.html
@@ -53,24 +53,30 @@
         <div class="about-section">
           <div class="about-description">
             <p class="first-par">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I’m a React Native Developer based
-              in Istanbul, Turkey. Creating mobile applications with an eye for
-              design.
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I’m a Frontend-mobile developer
+              based in Istanbul, Turkey. Creating mobile and web applications
+              with an eye for design.
             </p>
             <p class="second-par">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;After graduating from the faculty of
-              architecture, I worked for a year in my first job as an architect,
-              but then I decided to change career and become a software
-              developer because I did not see a future for myself in this field.
-              After 6 months of self study I got my first job as a frontend
-              developer at Brighsun Group and worked there for 7 months. In this
-              job, I have worked on excahnge app, crypto wallet app, e-commerce
-              app and admin panels. Right now I am working on my own projects
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Frontend-mobile developer with an
+              experience in developing responsive and intuitive user interfaces
+              with a keen eye for detail and a passion for creating engaging
+              user experiences and have a strong understanding of web
+              development principles. I am committed to delivering high-quality
+              work that exceeds expectations.
             </p>
           </div>
           <div class="about-experience">
             <h2>Experience</h2>
             <div class="experience-list">
+              <div class="experience-container">
+                <p class="date">Dec 2022 - Oct 2023</p>
+                <h2>UPayments</h2>
+                <p class="job">React Native Developer</p>
+                <p class="desc">
+                  Development of Upaymens app and POS app panels.
+                </p>
+              </div>
               <div class="experience-container">
                 <p class="date">Feb 2022 - Sep 2022</p>
                 <h2>Brighsun Group</h2>
@@ -78,16 +84,6 @@
                 <p class="desc">
                   Development of exchange apps, crypto wallet and their admin
                   panels.
-                </p>
-              </div>
-              <div class="experience-container">
-                <p class="date">Jun 2020 - Jul 2021</p>
-                <h2>Esentepe Architecture</h2>
-                <p class="job2">Architect</p>
-                <p class="desc">
-                  Architectural design, technical drawings, 3D modeling,
-                  construction site management and handling the application
-                  process of architectural projects.
                 </p>
               </div>
             </div>
@@ -192,7 +188,7 @@
         </div>
       </div>
     </main>
-    <script src="https://kit.fontawesome.com/944eb371a4.js"></script>
+    <script src="https://kit.fontawesome.com/00640a4820.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
