--- a/index.html
+++ b/index.html
@@ -63,23 +63,23 @@
         </div>
         <div class="article-description-section article-section">
           <div>
-            <p>Hi, I am Mehmet Asil Kılıç. A React Native Developer.</p>
+            <p>Hi, I am Mehmet Asil Kılıç. Frontend-Mobile Developer.</p>
           </div>
         </div>
         <div class="article-title-section article-section">
-          <h2>React Native Developer</h2>
+          <h2>Frontend-Mobile Developer</h2>
         </div>
         <a class="article-nav-section article-section" href="work.html">
           <button class="article-nav-button" type="button">
             <div class="row">
               <h2>Work</h2>
-              <i class="fa-light fa-arrow-right-long"></i>
+              <i class="fa-solid fa-arrow-right" style="color: #fafafa"></i>
             </div>
           </button>
         </a>
       </article>
     </main>
-    <script src="https://kit.fontawesome.com/944eb371a4.js"></script>
+    <script src="https://kit.fontawesome.com/00640a4820.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
