--- a/work.html
+++ b/work.html
@@ -49,7 +49,7 @@
     </nav>
 
     <main>
-      <article data-index="1" data-status="inactive">
+      <article data-index="2" data-status="inactive">
         <div class="article-image-section article-section"></div>
         <div class="article-description-section article-section">
           <div class="desc">
@@ -82,18 +82,18 @@
             type="button"
             onclick="handleLeftClick()"
           >
-            <i class="fa-light fa-arrow-left-long"></i>
+            <i class="fa-solid fa-arrow-left" style="color: #fafafa"></i>
           </button>
           <button
             class="article-nav-button"
             type="button"
             onclick="handleRightClick()"
           >
-            <i class="fa-light fa-arrow-right-long"></i>
+            <i class="fa-solid fa-arrow-right" style="color: #fafafa"></i>
           </button>
         </div>
       </article>
-      <article data-index="0" data-status="active">
+      <article data-index="1" data-status="inactive">
         <div class="article-image-section article-section"></div>
         <div class="article-description-section article-section">
           <div class="desc">
@@ -105,7 +105,7 @@
           </div>
           <div class="links">
             <div>
-              <i class="fa-brands fa-apple"></i>
+              <i class="fa-brands fa-apple" style="color: #ffffff"></i>
               <a
                 class="source-link"
                 href="https://apps.apple.com/us/app/reedu/id1541536566"
@@ -119,7 +119,7 @@
               <a class="source-link" href="#" target="_blank"> Play Store </a>
             </div> -->
             <div>
-              <i class="fa-regular fa-globe"></i>
+              <i class="fa-solid fa-globe" style="color: #ffffff"></i>
               <a class="source-link" href="https://reedu.app/" target="_blank">
                 Landing Page
               </a>
@@ -135,19 +135,110 @@
             type="button"
             onclick="handleLeftClick()"
           >
-            <i class="fa-light fa-arrow-left-long"></i>
+            <i class="fa-solid fa-arrow-left" style="color: #fafafa"></i>
           </button>
           <button
             class="article-nav-button"
             type="button"
             onclick="handleRightClick()"
           >
-            <i class="fa-light fa-arrow-right-long"></i>
+            <i class="fa-solid fa-arrow-right" style="color: #fafafa"></i>
+          </button>
+        </div>
+      </article>
+      <article data-index="0" data-status="active">
+        <div class="article-image-section article-section"></div>
+        <div class="article-description-section article-section">
+          <div class="desc">
+            <p>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Simple payment services and business
+              management that help businesses grow.
+            </p>
+            <br />
+            <span style="color: #999; font-size: 14px"
+              >-Optimized the app performance by implementing efficient state
+              management and leveraging component lifecycles.</span
+            >
+            <br />
+            <span style="color: #999; font-size: 14px"
+              >-Integrated React Hook Form for streamlined and efficient form
+              validations, resulting in a significant improvement in app
+              performance.</span
+            >
+            <br />
+            <span style="color: #999; font-size: 14px"
+              >-Designed and successfully implemented a robust delivery schedule
+              system tailored specifically for store owners, enhancing
+              operational efficiency.</span
+            >
+            <span style="color: #999; font-size: 14px"
+              >-Developed an interactive order creation system enabling
+              merchants to browse and select products from the catalog with
+              customizable options and implemented a verification mechanism to
+              ensure selected variations' availability, minimizing errors and
+              preventing invalid combinations during the ordering process.</span
+            >
+            <span style="color: #999; font-size: 14px"
+              >-Integrated Firebase Cloud Messaging to enable real-time push
+              notifications, enhancing user engagement and facilitating timely
+              updates for merchants and customers.</span
+            >
+          </div>
+          <div class="links">
+            <div>
+              <i class="fa-brands fa-apple" style="color: #ffffff"></i>
+              <a
+                class="source-link"
+                href="https://apps.apple.com/kw/app/upayments/id1311356029?platform=iphone"
+                target="_blank"
+              >
+                App Store
+              </a>
+            </div>
+            <div>
+              <i class="fa-brands fa-google-play" style="color: #ffffff"></i>
+              <a
+                class="source-link"
+                href="https://play.google.com/store/apps/details?id=com.upay.upayments.mobile"
+                target="_blank"
+              >
+                Play Store
+              </a>
+            </div>
+            <div>
+              <i class="fa-solid fa-globe" style="color: #ffffff"></i>
+              <a
+                class="source-link"
+                href="https://upayments.com/en/"
+                target="_blank"
+              >
+                Landing Page
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="article-title-section article-section">
+          <h2>UPaymnets</h2>
+        </div>
+        <div class="article-nav-section article-section">
+          <button
+            class="article-nav-button"
+            type="button"
+            onclick="handleLeftClick()"
+          >
+            <i class="fa-solid fa-arrow-left" style="color: #fafafa"></i>
+          </button>
+          <button
+            class="article-nav-button"
+            type="button"
+            onclick="handleRightClick()"
+          >
+            <i class="fa-solid fa-arrow-right" style="color: #fafafa"></i>
           </button>
         </div>
       </article>
     </main>
-    <script src="https://kit.fontawesome.com/944eb371a4.js"></script>
+    <script src="https://kit.fontawesome.com/00640a4820.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
