--- a/work.html
+++ b/work.html
@@ -218,7 +218,7 @@
           </div>
         </div>
         <div class="article-title-section article-section">
-          <h2>UPaymnets</h2>
+          <h2>UPayments</h2>
         </div>
         <div class="article-nav-section article-section">
           <button
